# pyramaterised

./: .gitignore  MANIFEST.in  PQC.py  PQC_lib.py  QC.py  Quantum Geometry.ipynb  README.md  capacity_simulations.py  circuit_builder.py  circuit_structures.py  colourmap_trajectories.py  effective_h_dim.py  example.py  expr_ent_plots.py  gates.py  hello_world.py  helper_functions.py  log_fitting.py  magic_plots.py  measure_all.py  measurement.py  measurements.py  memory_test.py  mpi.py  multi_testing.py  new_tests.py  pauli.py  plot.py  plotting.py  properties_vs_N_deep_circuits.py  pyproject.toml  qfim_evals.py  requirements.txt  tests.py  text_based.py  unclifford.py
.github/workflows/: tests.yml
images/: repo_logo.png~
pyqc/: __init__.py  circuit.py  gates.py  measure.py  templates.py
pyqc_lib/: PQC.py  measurement.py  pyqc.py
pyramaterised/: gates.py
